fixing horisontal scrollbar

--- a/theme/src/kmom03.less
+++ b/theme/src/kmom03.less
@@ -107,9 +107,19 @@
 */
 // @import "layout/layout.less";
 // @import "layout/layout_kmom02.less";
-@import "layout/responsive.less";
 @import "layout/regions.less";     // To add style for ?regions
+@import "layout/responsive.less";
 
+/**
+*   H scroll bar fix
+*/
+.inner-wrap-header .row,
+.inner-wrap-flash .row,
+.region-flash img {
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
+}
 
 
 /**
